[package]
name = "surrealdb-core"
publish = true
readme = "README.md"
documentation = "https://docs.rs/surrealdb-core/"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true

[features]
# Public features
default = ["kv-mem"]
kv-mem = [
    "dep:surrealmx",
    "tokio/time",
    "dep:tempfile",
    "dep:ext-sort",
    "dep:affinitypool",
]
kv-indxdb = ["dep:indxdb"]
kv-rocksdb = [
    "dep:rocksdb",
    "tokio/time",
    "dep:tempfile",
    "dep:ext-sort",
    "dep:affinitypool",
]
kv-tikv = ["dep:tikv", "tokio/time", "dep:tempfile", "dep:ext-sort"]
kv-surrealkv = [
    "dep:surrealkv",
    "tokio/time",
    "dep:tempfile",
    "dep:ext-sort",
    "dep:affinitypool",
]
scripting = ["dep:js"]
http = ["dep:reqwest"]
ml = ["dep:surrealml"]
jwks = ["dep:reqwest"]
surrealism = ["dep:surrealism-runtime"]
allocator = ["dep:jemallocator"]
arbitrary = [
    "dep:arbitrary",
    "dep:regex-syntax",
    "regex-syntax/arbitrary",
    "rust_decimal/rust-fuzz",
    "geo-types/arbitrary",
    "uuid/arbitrary",
    "surrealdb-types/arbitrary",
]
allocation-tracking = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["kv-mem", "kv-rocksdb", "http", "scripting"]
targets = []

[dependencies]

# External surreal crates
surrealmx = { workspace = true, optional = true }
surrealkv = { workspace = true, optional = true }
surrealml = { workspace = true, optional = true }

affinitypool = { workspace = true, optional = true }
dmp.workspace = true
indxdb = { workspace = true, optional = true }
js = { workspace = true, features = [
    "array-buffer",
    "bindgen",
    "classes",
    "futures",
    "loader",
    "macro",
    "parallel",
    "properties",
    "rust-alloc",
], optional = true }
lexicmp.workspace = true
reblessive = { workspace = true, features = ["tree"] }
revision.workspace = true
storekey.workspace = true
surrealdb-types = { workspace = true }
vart.workspace = true

# External KV stores
rocksdb = { workspace = true, optional = true }
tikv = { workspace = true, optional = true }

# Other crates
addr.workspace = true
ahash.workspace = true
ammonia.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
argon2.workspace = true
async-channel.workspace = true
async-executor.workspace = true
async-graphql = { workspace = true, default-features = false, features = [
    "dynamic-schema",
] }
async-trait.workspace = true
base64.workspace = true
bcrypt.workspace = true
bincode.workspace = true
blake3.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
ciborium.workspace = true
dashmap.workspace = true
deunicode.workspace = true
fastnum.workspace = true
flatbuffers.workspace = true
fst.workspace = true
futures.workspace = true
fuzzy-matcher.workspace = true
geo = { workspace = true, features = ["use-serde"] }
geo-types = { workspace = true }
http.workspace = true
hex.workspace = true
humantime.workspace = true
ipnet.workspace = true
jsonwebtoken.workspace = true
linfa-linalg.workspace = true
md-5.workspace = true
nanoid.workspace = true
ndarray.workspace = true
ndarray-stats.workspace = true
num_cpus.workspace = true
num-traits.workspace = true
object_store.workspace = true
parking_lot.workspace = true
papaya.workspace = true
path-clean.workspace = true
pbkdf2 = { workspace = true, features = ["simple"] }
phf = { workspace = true, features = ["macros", "unicase"] }
pin-project-lite.workspace = true
quick_cache.workspace = true
radix_trie = { workspace = true, features = ["serde"] }
rand.workspace = true
rayon.workspace = true
regex.workspace = true
roaring = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true, features = ["maths", "serde-str"] }
rust-stemmers.workspace = true
scrypt.workspace = true
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
snap.workspace = true
strsim.workspace = true
subtle.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tracing.workspace = true
trice.workspace = true
ulid = { workspace = true, features = ["serde"] }
unicase.workspace = true
url.workspace = true

# Other optional crates
arbitrary = { workspace = true, features = ["derive"], optional = true }
ext-sort = { workspace = true, optional = true }
regex-syntax = { workspace = true, optional = true }
reqwest = { workspace = true, default-features = false, features = [
    "http2",
    "json",
    "stream",
    "multipart",
], optional = true }
tempfile = { workspace = true, optional = true }

# WASM DEPENDENCY CONFIGURATION
[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
pharos.workspace = true
ring = { workspace = true, features = ["wasm32_unknown_unknown_js"] }
surrealdb-protocol = { workspace = true, features = ["proto", "flatbuffers"] }
tokio = { workspace = true, default-features = false, features = [
    "rt",
    "sync",
] }
tokio-util.workspace = true
uuid = { workspace = true, features = ["serde", "js", "v4", "v7"] }
wasm-bindgen-futures.workspace = true
wasmtimer = { workspace = true, default-features = false, features = ["tokio"] }
ws_stream_wasm.workspace = true

# NON-WASM DEPENDENCY CONFIGURATION
# Note: surrealism-runtime is only available on non-WASM targets
# The surrealism feature will be enabled by default for non-WASM in the parent workspace
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rust-s3 = { workspace = true, optional = true }
surrealdb-protocol = { workspace = true, features = ["proto", "flatbuffers", "rpc"] }
tokio = { workspace = true, default-features = false, features = [
    "macros",
    "io-util",
    "io-std",
    "fs",
    "rt-multi-thread",
    "time",
    "sync",
] }
tokio-tungstenite = { workspace = true, optional = true }
tokio-util.workspace = true
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
surrealism-runtime = { workspace = true, optional = true }

# OS-SPECIFIC ALLOCATOR DEPENDENCIES
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "ios", target_os = "android", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
jemallocator = { workspace = true, optional = true }

# DEVELOPMENT DEPENDENCIES
[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
env_logger.workspace = true
flate2.workspace = true
hashbrown.workspace = true
pprof = { workspace = true, features = ["flamegraph", "criterion"] }
rstest.workspace = true
serial_test.workspace = true
temp-dir.workspace = true
test-log = { workspace = true, features = ["trace"] }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "sync", "rt-multi-thread"] }
tokio-util.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wiremock.workspace = true

[lints]
workspace = true

[lib]
name = "surrealdb_core"

[[bench]]
name = "allocation_tracking"
harness = false
