[package]
name = "surrealdb-fuzz"
publish = false
version.workspace = true
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version= "0.4.7", features = ["arbitrary-derive"] }
arbitrary.workspace = true
futures.workspace = true
tokio.workspace = true

[dependencies.surrealdb]
path = "../sdk"
features = ["kv-mem", "arbitrary"]
default-features = false

[[bin]]
name = "fuzz_sql_parser"
path = "fuzz_targets/fuzz_sql_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_executor"
path = "fuzz_targets/fuzz_executor.rs"
test = false
doc = false

[[bin]]
name = "fuzz_structured_executor"
path = "fuzz_targets/fuzz_structured_executor.rs"
test = false
doc = false
