[package]
name = "surrealdb-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version= "0.4.7", features = ["arbitrary-derive"] }
tokio = "1.44.2"

[dependencies.surrealdb-core]
path = "../core"
features = ["kv-mem", "arbitrary"]
default-features = false

[dependencies.surrealdb-types]
version = "3.0.0-beta.1"
features = ["arbitrary"]
default-features = false


# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_sql_parser"
path = "fuzz_targets/fuzz_sql_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_executor"
path = "fuzz_targets/fuzz_executor.rs"
test = false
doc = false

[[bin]]
name = "fuzz_structured_executor"
path = "fuzz_targets/fuzz_structured_executor.rs"
test = false
doc = false


[[bin]]
name = "fuzz_format"
path = "fuzz_targets/fuzz_format.rs"
test = false
doc = false
