[package]
name = "surrealql-test"
version = "0.1.0"
edition = "2021"

[features]
#backend-mem = []
#backend-surrealkv = []
#backend-rocksdb = []
#backend-foundation-7_1 = []
#backend-foundation-7_3 = []
#backend-tikv = []
#backend-client-ws = []
#backend-client-http = []
#default = ["backend-mem"]
#fuzzing = ["dep:libfuzzer-sys", "dep:arbitrary", "surrealdb-core/arbitrary"]

[dependencies]
# Crates for running surrealdb.
surrealdb-core = { path = "../core/", features = ["scripting"] }
reblessive = { version = "*" }
rust_decimal = { version = "1.36.0", features = ["maths", "serde-str"] }

# Used for capturing logs from core
#tracing = "*"
#tracing-subscriber = { version = "*", features = ["fmt","ansi"] }

# Simplified path handling, test doesn't care about non-utf8 paths.
camino = { version = "1.1.9", features = ["serde1"] }

# Error handling
anyhow = "1.0.89"

# Async utility crates
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"

# Config and cli parsing
clap = { version = "4.5.17", features = ["cargo"] }
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
toml_edit = { version = "0.22.21", features = ["serde"] }

# Used for formatting output
base64 = "0.21.5"
similar = "2.6.0"
atty = "0.2.14"

# For running fuzzing tests.
# WIP feature.
#libfuzzer-sys = { version = "0.4.7", features = ["arbitrary-derive"], optional = true }
#arbitrary = { version = "1.3.2", optional = true }
