[package]
name = "language-tests"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = ["backend-mem"]
backend-mem = ["surrealdb-core/kv-mem"]
backend-surrealkv = ["surrealdb-core/kv-surrealkv"]
backend-rocksdb = ["surrealdb-core/kv-rocksdb"]
backend-foundation-7_1 = ["surrealdb-core/kv-fdb-7_1"]
backend-foundation-7_3 = ["surrealdb-core/kv-fdb-7_3"]
upgrade = ["backend-surrealkv"]                        # Upgrade test suite.

[dependencies]
# Crates for running surrealdb.
surrealdb-core = { workspace = true, default-features = false, features = [
    "scripting",
] }
reblessive.workspace = true
rust_decimal.workspace = true

# Used for capturing logs from core
#tracing = "*"
#tracing-subscriber = { version = "*", features = ["fmt","ansi"] }

# Error handling
anyhow = "1.0.81"

# Async utility crates
tokio = { workspace = true, features = ["full"] }
futures.workspace = true

# Config and cli parsing
clap = { version = "4.4.11", features = ["cargo"] }
serde = { workspace = true, features = ["derive"] }
toml = "0.8.19"
toml_edit = { version = "0.22", features = ["serde"] }
semver.workspace = true

# Used for formatting output
base64.workspace = true
similar = "2.6.0"

[lints]
workspace = true
