[package]
name = "surrealdb-macros"
publish = false
edition = "2024"
version = "0.1.0"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "Private implementation of procedural macros for surrealdb"
homepage = "https://github.com/surrealdb/surrealdb/tree/main/crates/macros"
repository = "https://github.com/surrealdb/surrealdb/tree/main/crates/macros"
keywords = ["surrealdb", "surreal", "database", "derive"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.66"
quote = "1.0.36"

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
revision = { workspace = true }
storekey = { workspace = true }
