[package]
name = "surrealdb-macros"
publish = true
readme = "README.md"
documentation = "https://docs.rs/surrealdb-macros/"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
revision = { workspace = true }
storekey = { workspace = true }
