[package]
name = "surrealdb-parser"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
common.workspace = true
ast.workspace = true

bitflags.workspace = true
reblessive.workspace = true
logos = { version = "0.15.1", path = "../../../logos" }

[lints]
workspace = true
